--- a/package.json
+++ b/package.json
@@ -13,23 +13,23 @@
     "info": "next info"
   },
   "dependencies": {
-    "@ai-sdk/azure": "^0.0.21",
-    "@nextui-org/react": "^2.4.6",
-    "@prisma/client": "^5.18.0",
+    "@prisma/client": "^5.19.1",
     "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-hover-card": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
-    "ai": "^3.3.2",
-    "axios": "^1.7.3",
+    "@radix-ui/react-slot": "^1.1.0",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.3.22",
+    "framer-motion": "^11.5.5",
     "limiter": "^2.1.0",
-    "next": "14.2.5",
+    "next": "14.2.13",
     "next-themes": "^0.3.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "styled-jsx": "^5.1.6",
-    "tailwind-merge": "^2.4.0",
+    "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "use-immer": "^0.10.0"
   },
@@ -37,23 +37,23 @@
     "node": ">=18.17.0"
   },
   "devDependencies": {
-    "@types/node": "22.1.0",
-    "@types/react": "18.3.3",
+    "@types/node": "22.5.5",
+    "@types/react": "18.3.8",
     "@types/react-dom": "18.3.0",
     "autoprefixer": "10.4.20",
     "client-only": "^0.0.1",
     "eslint": "^8",
-    "eslint-config-next": "^14.2.5",
+    "eslint-config-next": "^14.2.13",
     "next-sitemap": "^4.2.3",
-    "orval": "^7.0.1",
-    "postcss": "8.4.41",
+    "orval": "^7.1.1",
+    "postcss": "8.4.47",
     "prettier": "^3.3.3",
     "prettier-plugin-organize-imports": "^4.0.0",
-    "prisma": "^5.18.0",
-    "sass": "^1.77.8",
+    "prisma": "^5.19.1",
+    "sass": "^1.79.2",
     "server-only": "^0.0.1",
     "swr": "^2.2.5",
-    "tailwindcss": "3.4.7",
-    "typescript": "5.5.4"
+    "tailwindcss": "3.4.12",
+    "typescript": "5.6.2"
   }
 }
